artifact version bump for jdk 11